--- a/frutas.html
+++ b/frutas.html
@@ -102,7 +102,9 @@
               placeholder="Papa, cebolla, zanahoria..."
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <button class="btn btn-outline-success" type="submit">
+              Buscar
+            </button>
           </form>
         </div>
       </div>
@@ -118,7 +120,7 @@
       <div>
         <section class="row align-items-lg-center">
           <!-- <<<<<<<<<<<<<<< NARANJA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -132,14 +134,13 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< NARANJA OMBLIGO >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
             >
               <img
                 src="img/naranjaOmbligo.jpg"
-                wwww
                 class="card-img-top bg-third-color"
                 alt="Sites"
               />
@@ -151,7 +152,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< Zanahoria >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -169,7 +170,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< TOMATE REDONDO >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card d-flex text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -187,7 +188,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -205,7 +206,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< MORRON >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -223,7 +224,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -236,12 +237,12 @@
               <div class="card-body text-center">
                 <h5 class="card-title fs-6">Repollada</h5>
                 <p class="card-text">2kg.</p>
-                <a href="#" class="btn btn-success">$450</a>
+                <a href="#" class="btn btn-success ">$450</a>
               </div>
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -259,7 +260,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -277,7 +278,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< CALABAZA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -295,7 +296,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLITO >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -313,7 +314,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -331,7 +332,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -349,7 +350,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -367,7 +368,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -385,7 +386,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -403,7 +404,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -421,7 +422,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -439,7 +440,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -457,7 +458,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -475,7 +476,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -493,7 +494,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -511,7 +512,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -529,7 +530,7 @@
             </div>
           </article>
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
-          <article class="col-12 col-sm-6 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
