--- a/ofertas.html
+++ b/ofertas.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
         /></a>
         <button
@@ -118,8 +118,8 @@
     </div>
 
     <!-- <<< BOLSA DE PAPA >>> -->
-    <main class="container border rounded">
-      <div class="card text-bg-dark border my-3">
+    <main class="container">
+      <div class="card text-bg-dark border my-3 mx-auto mx-auto">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
           <h5 class="card-title text-center"></h5>
@@ -129,7 +129,7 @@
       </div>
 
       <!-- <<< BOLSA DE CEBOLLA >>> -->
-      <div class="card text-bg-dark border my-3">
+      <div class="card text-bg-dark border my-3 mx-auto">
         <img src="img/bolsa de cebolla.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
           <h5 class="card-title text-center"></h5>
@@ -138,7 +138,7 @@
         </div>
       </div>
       <!-- <<< TOMATE PERITA >>> -->
-      <div class="card text-bg-dark border my-3">
+      <div class="card text-bg-dark border my-3 mx-auto">
         <img src="img/tomate-peritaX2kg.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
           <h5 class="card-title text-center"></h5>
@@ -147,7 +147,7 @@
         </div>
       </div>
 
-      <div class="card text-bg-dark border my-3">
+      <div class="card text-bg-dark border my-3 mx-auto">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
           <h5 class="card-title text-center"></h5>
@@ -156,7 +156,7 @@
         </div>
       </div>
 
-      <div class="card text-bg-dark border my-3">
+      <div class="card text-bg-dark border my-3 mx-auto">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
           <h5 class="card-title text-center"></h5>
