--- a/ofertas.html
+++ b/ofertas.html
@@ -119,7 +119,7 @@
 
     <!-- <<< BOLSA DE PAPA >>> -->
     <main class="container">
-      <div class="card text-bg-dark border my-3 mx-auto mx-auto">
+      <div class="card text-bg-dark border my-3 mx-auto">
         <img src="img/bolsa de papa.png" class="card-img" alt="..." />
         <div class="card-img-overlay">
           <h5 class="card-title text-center"></h5>
