--- a/frutas.html
+++ b/frutas.html
@@ -31,6 +31,13 @@
         <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
         /></a>
+        <a
+              class="av__don__bosco__cel"
+              href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
+              target="_black"
+              ><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a
+            >
+          </li>
         <button
           class="navbar-toggler"
           type="button"
@@ -111,16 +118,16 @@
     </nav>
 
     <div class="text-center text-white container pt-3">
-      <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
-      <h1>Jireh - Frutas.</h1>
+      <img src="img/logoLarge.png" class="img-fluid logo__large" alt="Logo" />
+      <h1>- Frutas -</h1>
       <p>Calidad a un excelente precio.</p>
     </div>
 
-    <main class="p-5 container">
+    <main class="p-3 container">
       <div>
-        <section class="row align-items-lg-center">
+        <section class="row align-items-lg-center g-0 g-md-0">
           <!-- <<<<<<<<<<<<<<< NARANJA >>>>>>>>>>>>>>> -->
-          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 g-0 d-flex">
             <div
               class="card text-bg-dark border-light m-1"
               style="width: 10rem"
@@ -554,11 +561,15 @@
     <footer class="bg-dark pt-1 mt-5">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
-          <a href="#" target="_black"><i class="bi bi-instagram fs-3"></i></a>
+          <a href="https://www.instagram.com/jireh.fyv" target="_black"
+            ><i class="bi bi-instagram fs-3"></i
+          ></a>
 
-          <a href="#" target="_black"><i class="bi bi-facebook fs-3"></i></a>
+          <a href="https://www.facebook.com/jireh.fyv" target="_black"
+            ><i class="bi bi-facebook fs-3"></i
+          ></a>
 
-          <a href="#" target="_black"><i class="bi bi-messenger fs-3"></i></a>
+          <a href="https://m.me/jireh.fyv" target="_black"><i class="bi bi-messenger fs-3"></i></a>
 
           <a href="https://wa.me/543434050302" target="_black"
             ><i class="bi bi-whatsapp fs-3"></i
@@ -569,21 +580,6 @@
         </small>
       </div>
     </footer>
-
-    <!-- <div class="card mb-3" style="max-width: 540px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <img src="..." class="img-fluid rounded-start" alt="...">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
