--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
         /></a>
         <button
@@ -177,7 +177,7 @@
             ><i class="bi bi-facebook fs-3"></i
           ></a>
 
-          <a href="#" target="_black"><i class="bi bi-messenger fs-3"></i></a>
+          <a href="https://m.me/jireh.fyv" target="_black"><i class="bi bi-messenger fs-3"></i></a>
 
           <a href="https://wa.me/543434050302" target="_black"
             ><i class="bi bi-whatsapp fs-3"></i
