--- a/recetas.html
+++ b/recetas.html
@@ -117,11 +117,15 @@
     <footer class="bg-dark p-3">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
-          <a href="#" target="_black"><i class="bi bi-instagram fs-3"></i></a>
+          <a href="https://www.instagram.com/jireh.fyv" target="_black"
+            ><i class="bi bi-instagram fs-3"></i
+          ></a>
 
-          <a href="#" target="_black"><i class="bi bi-facebook fs-3"></i></a>
+          <a href="https://www.facebook.com/jireh.fyv" target="_black"
+            ><i class="bi bi-facebook fs-3"></i
+          ></a>
 
-          <a href="#" target="_black"><i class="bi bi-messenger fs-3"></i></a>
+          <a href="https://m.me/jireh.fyv" target="_black"><i class="bi bi-messenger fs-3"></i></a>
 
           <a href="https://wa.me/543434050302" target="_black"
             ><i class="bi bi-whatsapp fs-3"></i
