--- a/verduras.html
+++ b/verduras.html
@@ -33,13 +33,7 @@
         <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
         /></a>
-        <a
-              class="av__don__bosco__cel"
-              href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
-              target="_black"
-              ><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a
-            >
-          </li>
+        
         <button
           class="navbar-toggler"
           type="button"
@@ -118,7 +112,7 @@
     </nav>
 
     <div class="text-center text-white container pt-3">
-      <img src="img/logoLarge.png" class="img-fluid shadow__img__logo" alt="Logo" />
+      <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
       <h1>Jireh - Verduras.</h1>
       <p>Calidad a un excelente precio.</p>
     </div>
