--- a/frutas.html
+++ b/frutas.html
@@ -26,7 +26,7 @@
   </head>
   <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Jireh</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -103,7 +103,9 @@
           <form class="d-flex" role="search">
             <input
               class="form-control me-2"
-              type="search"
+              type="text"
+              id="buscador"
+              name="buscador"
               placeholder="Papa, cebolla, zanahoria..."
               aria-label="Search"
             />
@@ -117,22 +119,22 @@
 
     <div class="text-center text-white container pt-3">
       <img src="img/logoLarge.png" class="img-fluid logo__large" alt="Logo" />
-      <h1>- Frutas -</h1>
+      <h1>Frutas</h1>
       <p>Calidad a un excelente precio.</p>
     </div>
 
-    <main class="p-3 container">
+    <main class="p-3 container" id="id__fruit">
       <div>
-        <section class="row align-items-lg-center g-0 g-md-0">
+        <section class="row align-items-lg-center">
           <!-- <<<<<<<<<<<<<<< NARANJA >>>>>>>>>>>>>>> -->
-          <article class="col-4 col-sm-4 col-md-3 col-lg-2 g-0 d-flex">
+          <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img src="img/naranja01.jpg" class="card-img-top" alt="Naranja" />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Naranja</h5>
+                <h5 class="card-title fs-6 articulo">Naranja</h5>
                 <p class="card-text">1kg.</p>
                 <a href="#" class="btn btn-success">$199</a>
               </div>
@@ -141,7 +143,7 @@
           <!-- <<<<<<<<<<<<<<< NARANJA OMBLIGO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark m-1"
               style="width: 10rem"
             >
               <img
@@ -150,7 +152,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Naranja</h5>
+                <h5 class="card-title fs-6 articulo">Naranja</h5>
                 <p class="card-text">1kg.</p>
                 <a href="#" class="btn btn-success">$149</a>
               </div>
@@ -159,7 +161,7 @@
           <!-- <<<<<<<<<<<<<<< Zanahoria >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -168,7 +170,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6 fs-6">Zanahoria</h5>
+                <h5 class="card-title fs-6 articulo fs-6">Zanahoria</h5>
                 <p class="card-text">1kg.</p>
                 <a href="#" class="btn btn-success">$149</a>
               </div>
@@ -177,7 +179,7 @@
           <!-- <<<<<<<<<<<<<<< TOMATE REDONDO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card d-flex text-bg-dark border-light m-1"
+              class="card text-bg-dark m-1"
               style="width: 10rem"
             >
               <img
@@ -186,7 +188,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Tomate</h5>
+                <h5 class="card-title fs-6 articulo">Tomate</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -195,7 +197,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -204,7 +206,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Papa</h5>
+                <h5 class="card-title fs-6 articulo">Papa</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -213,7 +215,7 @@
           <!-- <<<<<<<<<<<<<<< MORRON >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -222,7 +224,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Morrón</h5>
+                <h5 class="card-title fs-6 articulo">Morrón</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -231,7 +233,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -240,7 +242,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Repollada</h5>
+                <h5 class="card-title fs-6 articulo">Repollada</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success ">$450</a>
               </div>
@@ -249,7 +251,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -258,7 +260,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -267,7 +269,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -276,7 +278,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Ajo</h5>
+                <h5 class="card-title fs-6 articulo">Ajo</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -285,7 +287,7 @@
           <!-- <<<<<<<<<<<<<<< CALABAZA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -294,7 +296,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Calabaza</h5>
+                <h5 class="card-title fs-6 articulo">Calabaza</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -303,7 +305,7 @@
           <!-- <<<<<<<<<<<<<<< ZAPALLITO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -312,7 +314,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Zapallito</h5>
+                <h5 class="card-title fs-6 articulo">Zapallito</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -321,7 +323,7 @@
           <!-- <<<<<<<<<<<<<<< ZAPALLO >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -330,7 +332,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Zapallo</h5>
+                <h5 class="card-title fs-6 articulo">Zapallo</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -339,7 +341,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -348,7 +350,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -357,7 +359,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -366,7 +368,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -375,7 +377,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -384,7 +386,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -393,7 +395,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -402,7 +404,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -411,7 +413,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -420,7 +422,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -429,7 +431,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -438,7 +440,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -447,7 +449,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -456,7 +458,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -465,7 +467,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -474,7 +476,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -483,7 +485,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -492,7 +494,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -501,7 +503,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -510,7 +512,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -519,7 +521,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -528,7 +530,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -537,7 +539,7 @@
           <!-- <<<<<<<<<<<<<<< PAPA >>>>>>>>>>>>>>> -->
           <article class="col-4 col-sm-4 col-md-3 col-lg-2 d-flex">
             <div
-              class="card text-bg-dark border-light m-1"
+              class="card text-bg-dark  m-1"
               style="width: 10rem"
             >
               <img
@@ -546,7 +548,7 @@
                 alt="Sites"
               />
               <div class="card-body text-center">
-                <h5 class="card-title fs-6">Lechuga</h5>
+                <h5 class="card-title fs-6 articulo">Lechuga</h5>
                 <p class="card-text">2kg.</p>
                 <a href="#" class="btn btn-success">$450</a>
               </div>
@@ -554,6 +556,10 @@
           </article>
         </section>
       </div>
+      <div class="text-center text-white container pt-3">
+        <a href="frutas.html#id__fruit"><i class="bi bi-arrow-up-circle fs-2"></i></a>
+      </div>
+      
     </main>
 
     <footer class="bg-dark pt-1 mt-5">
@@ -586,5 +592,6 @@
     ></script>
 
     <script src="js/main.js"></script>
+    <script src="js/buscador.js"></script>
   </body>
 </html>
