--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
     <link rel="stylesheet" href="css/estilos.css" />
     <link rel="icon" href="img/LogoNav.png" />
   </head>
-  <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
-  <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
+
   <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
         /></a>
         <a class="av__don__bosco__cel"
               href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
-              target="_black"
-              ><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a>
+              target="_black"><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a>
           </li>
         <button
           class="navbar-toggler"
@@ -53,7 +51,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
+                >Jireh</a
               >
             </li>
             <li class="nav-item dropdown">
@@ -96,18 +94,19 @@
               ></a>
             </li>
           </ul>
-          <li class="me-3 av__don">
+          <li class="me-3">
             <a
               class="av__don__bosco"
               href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192"
               target="_black"
-              ><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a
-            >
+              ><i class="bi bi-geo-alt-fill me-1"></i>Av. Don Bosco 276</a>
           </li>
           <form class="d-flex" role="search">
             <input
               class="form-control me-2"
-              type="search"
+              type="text"
+              id="buscador"
+              name="buscador"
               placeholder="Papa, cebolla, zanahoria..."
               aria-label="Search"
             />
@@ -120,9 +119,24 @@
     </nav>
 
     <div class="text-center text-white container pt-3">
-      <!-- <img src="img/logoLarge.png" class="img-fluid" alt="Logo" /> -->
-      <h1>Jireh- Verduleria y fruteria.</h1>
-      <p>Calidad a un excelente precio.</p>
+      <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
+      <h1>Jireh - Verduleria y fruteria.</h1>
+      <p>¡Bienvenidos! Somos un pequeño negocio familiar que se dedica a ofrecer productos frescos y de calidad a nuestros clientes. Desde el primer día hemos estado comprometidos en brindarles a nuestros clientes el mejor servicio posible y asegurarnos de que estén satisfechos con cada compra que realizan...</p><br>
+      <section>
+      <h5 class="fs-5 text-bg-dark badge">Horarios:</h5>
+      <p>Lunes</p>
+      <p>Martes</p>
+      <p>Miercoles</p>
+      <p>Jueves</p>
+      <p>Viernes</p>
+      <p>Sábado</p>
+      <p>Domingo</p>
+    </section>
+    <p></p>
+      <p>El local está ubicado en <a class="text-white" href="https://www.google.com.ar/maps/@-31.7335871,-60.5119801,3a,75y,185.27h,69.64t/data=!3m6!1e1!3m4!1sWOBYROvYOCJORhx-iVwYrQ!2e0!7i16384!8i8192" target="_black"><i class="bi bi-geo-alt-fill"></i> Av. Don Bosco 276</a> de la ciudad de Paraná, Entre Ríos.</p>
+      <p></p>
+      <a href="index.html#id__carrousel"><i class="bi bi-arrow-down-circle fs-2"></i></a>
+
     </div>
 
     <div
@@ -130,7 +144,7 @@
       class="carousel slide"
       data-bs-ride="carousel"
     >
-      <div class="carousel-inner">
+      <div class="carousel-inner" id="id__carrousel">
         <div class="carousel-item active">
           <img src="img/slider-01.jpg" class="d-block w-100" alt="..." />
         </div>
@@ -166,11 +180,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <!-- <div class="text-center text-white container pb-3">
-      <img src="img/logoLarge.png" class="img-fluid" alt="Logo" />
-      <h1>Jireh - Verduleria y fruteria.</h1>
-      <p>Calidad a un excelente precio.</p>
-    </div> -->
+  
     <footer class="bg-dark p-3">
       <div class="container text-center">
         <nav class="d-flex justify-content-evenly">
@@ -201,5 +211,6 @@
     ></script>
 
     <script src="js/main.js"></script>
+    <script src="js/buscador.js"></script>
   </body>
 </html>
