--- a/recetas.html
+++ b/recetas.html
@@ -28,7 +28,7 @@
   <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
   <!-- <<<<<<<<<<<<<<<<<<<< BODY >>>>>>>>>>>>>>>>>>>> -->
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"
           ><img class="logo__nav" src="img/LogoNav.png" alt="Jireh"
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Jireh</a>
             </li>
             <li class="nav-item dropdown">
               <a
